--- a/Mon2ndSite/Views/Restoes/Index.cshtml
+++ b/Mon2ndSite/Views/Restoes/Index.cshtml
@@ -17,7 +17,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Telephone)
         </th>
-        <th></th>
+        <th> Actions </th>
     </tr>
 
 @foreach (var item in Model) {
