:construction: WIP TP3

--- a/Mon2ndSite/Views/Accueil/Index.cshtml
+++ b/Mon2ndSite/Views/Accueil/Index.cshtml
@@ -5,3 +5,12 @@
 
 <h2>Index</h2>
 
+<p>Prêts à choisir un restaurant ?</p>
+@using (Html.BeginForm())
+{
+    <input type="submit" value="Créer un sondage" />
+}
+<ul>
+    <li>@Html.ActionLink("Ajouter un restaurant", "Create", "Resto")</li>
+    <li>@Html.ActionLink("Modifier les restaurants", "Index", "Resto")</li>
+</ul>
