--- a/Mon2ndSite/Views/Restos/Create.cshtml
+++ b/Mon2ndSite/Views/Restos/Create.cshtml
@@ -10,7 +10,7 @@
 {
     <div class="form-horizontal">
         <fieldset>
-            <legend>Ajouter un restaurant</legend>
+            <legend>Add un restaurant</legend>
             <div>
                 @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.TextBoxFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
