:sparkles: TP3 End

--- a/Mon2ndSite/Views/Vote/AfficheResultat.cshtml
+++ b/Mon2ndSite/Views/Vote/AfficheResultat.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ChoixResto.Models.Resultats>
+﻿@model List<Mon2ndSite.Models.Results>
 @{
     ViewBag.Title = "AfficheResultat";
     Layout = "~/Views/Shared/_Layout.cshtml";
