--- a/Mon2ndSite/Views/Vote/Index.cshtml
+++ b/Mon2ndSite/Views/Vote/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Mon2ndSite.Models.RestoVoteViewModel
+﻿@model Mon2ndSite.ViewModels.RestoVoteViewModel
 @{
     ViewBag.Title = "Vote";
     Layout = "~/Views/Shared/_Layout.cshtml";
