--- a/Mon2ndSite/Views/Shared/_Layout.cshtml
+++ b/Mon2ndSite/Views/Shared/_Layout.cshtml
@@ -25,14 +25,13 @@
             </div>
         </div>
     </div>
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <div class="container-fluid body-content">
+        @RenderBody()        
     </div>
+    <footer class="mastfoot mt-auto container-fluid">
+        <hr />
+        <p class="inner">&copy; @DateTime.Now.Year - Valentine Lav</p>
+    </footer>
 
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
