--- a/Mon2ndSite/Views/Vote/AfficheResultat.cshtml
+++ b/Mon2ndSite/Views/Vote/AfficheResultat.cshtml
@@ -5,15 +5,15 @@
 }
 
 <h2>Résultats du sondage :</h2>
-<table>
-    <tr>
+<table class="table">
+    <thead class="thead-dark table-striped">
         <th>Nom</th>
         <th>Téléphone</th>
         <th>Nombre de votes</th>
-    </tr>
+    </thead>
     @foreach (var resto in Model)
     {
-        <tr>
+        <tr scope="row">
             <td>@resto.Nom</td>
             <td>@resto.Telephone</td>
             <td>@resto.NombreDeVotes</td>
