--- a/Mon2ndSite/Views/Restos/Create.cshtml
+++ b/Mon2ndSite/Views/Restos/Create.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm())
 {
-    <div class="form-horizontal">
+    <div class="container">
         <fieldset>
             <legend>Add un restaurant</legend>
             <div>
