--- a/Mon2ndSite/Views/Resto/Create.cshtml
+++ b/Mon2ndSite/Views/Resto/Create.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="container">
         <h4>Resto</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
