--- a/Mon2ndSite/Views/Shared/_Layout.cshtml
+++ b/Mon2ndSite/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid body-content">
+    <div class="container body-content">
         @RenderBody()        
     </div>
     <footer class="mastfoot mt-auto container-fluid">
